feat: 피자 동등성(equals) 비교 테스트 작성